--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@mdi/font": "^7.1.96",
+    "emailjs-com": "^3.2.0",
+    "material-design-icons-iconfont": "^6.7.0",
+    "three": "0.134",
+    "troisjs": "^0.3.4",
     "vue": "^3.2.45",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0",
     "vuetify": "^3.1.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "vite": "^4.1.0"
   }
